[package]
name = "mnml-cdn-cloudflare"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Cloudflare CDN browser for mnml — terminal TUI for zones, DNS records, Workers, Pages, and security events. Shells out to the Cloudflare API v4 (no SDK dep). Runs standalone today; v0.2 will support mnml-hosted pane mode."
homepage = "https://mnml.sh"
repository = "https://github.com/chris-mclennan/mnml-cdn-cloudflare"
readme = "README.md"
authors = ["Chris McLennan"]

[[bin]]
name = "mnml-cdn-cloudflare"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
opt-level = "z"
lto = true

[profile.dist]
inherits = "release"
lto = "thin"
